INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src

noinst_LIBRARIES = libcore.a

libcore_a_SOURCES = \
	ciacore.c \
	ciatimer.c \
	ciatimer.h \
	cs8900.c \
	cs8900.h \
	flash040core.c \
	fmopl.c \
	fmopl.h \
	mc6821core.c \
	mc6821core.h \
	riotcore.c \
	ser-eeprom.c \
	ser-eeprom.h \
	spi-sdcard.c \
	spi-sdcard.h \
	t6721.c \
	t6721.h \
	tpicore.c \
	viacore.c \
	ata.c \
	ata.h
