INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src/lib/p64 \
	-I$(top_srcdir)/src

noinst_LIBRARIES = libvdrive.a

libvdrive_a_SOURCES = \
	vdrive-bam.c \
	vdrive-bam.h \
	vdrive-command.c \
	vdrive-command.h \
	vdrive-dir.c \
	vdrive-dir.h \
	vdrive-iec.c \
	vdrive-iec.h \
	vdrive-internal.c \
	vdrive-internal.h \
	vdrive-rel.c \
	vdrive-rel.h \
	vdrive-snapshot.c \
	vdrive-snapshot.h \
	vdrive.c \
	vdrive.h

