INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/raster \
	-I$(top_srcdir)/src/c64 \
	-I$(top_srcdir)/src/c64/cart \
	-I$(top_srcdir)/src/lib/p64 \
	-I$(top_srcdir)/src/c64dtv

noinst_LIBRARIES = libvicii.a libviciidtv.a

libvicii_a_SOURCES = \
	vicii-badline.c \
	vicii-badline.h \
	vicii-clock-stretch.c \
	vicii-cmdline-options.c \
	vicii-cmdline-options.h \
	vicii-color.c \
	vicii-color.h \
	vicii-draw.c \
	vicii-draw.h \
	vicii-fetch.c \
	vicii-fetch.h \
	vicii-irq.c \
	vicii-irq.h \
	vicii-mem.c \
	vicii-mem.h \
	vicii-phi1.c \
	vicii-phi1.h \
	vicii-resources.c \
	vicii-resources.h \
	vicii-snapshot.c \
	vicii-snapshot.h \
	vicii-sprites.c \
	vicii-sprites.h \
	vicii-stubs.c \
	vicii-timing.c \
	vicii-timing.h \
	vicii.c \
	viciitypes.h

libviciidtv_a_SOURCES = \
	vicii-badline.c \
	vicii-badline.h \
	vicii-cmdline-options.c \
	vicii-cmdline-options.h \
	viciidtv-color.c \
	vicii-color.h \
	viciidtv-draw.c \
	vicii-draw.h \
	vicii-fetch.c \
	vicii-fetch.h \
	vicii-irq.c \
	vicii-irq.h \
	vicii-mem.c \
	vicii-mem.h \
	vicii-phi1.c \
	vicii-phi1.h \
	vicii-resources.c \
	vicii-resources.h \
	viciidtv-snapshot.c \
	vicii-snapshot.h \
	vicii-sprites.c \
	vicii-sprites.h \
	vicii-timing.c \
	vicii-timing.h \
	vicii.c \
	viciitypes.h
