INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/raster

noinst_LIBRARIES = libvideo.a

libvideo_a_SOURCES = \
	render1x1.c \
	render1x1.h \
	render1x1_dingoo.h \
	render1x1pal.c \
	render1x1pal.h \
	render1x1ntsc.c \
	render1x1ntsc.h \
	render1x2.c \
	render1x2.h \
	render1x2crt.c \
	render1x2crt.h \
	render2x2.c \
	render2x2.h \
	render2x2crt.c \
	render2x2crt.h \
	render2x2pal.c \
	render2x2pal.h \
	render2x2ntsc.c \
	render2x2ntsc.h \
	renderscale2x.c \
	renderscale2x.h \
	render2x4.c \
	render2x4.h \
	render2x4crt.c \
	render2x4crt.h \
	renderyuv.c \
	renderyuv.h \
	video-canvas.c \
	video-canvas.h \
	video-cmdline-options.c \
	video-color.c \
	video-color.h \
	video-render-1x2.c \
	video-render-2x2.c \
	video-render-crt.c \
	video-render-pal.c \
	video-render.c \
	video-render.h \
	video-resources.c \
	video-resources.h \
	video-sound.c \
	video-sound.h \
	video-viewport.c

