INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/core \
	-I$(top_srcdir)/src/drive \
	-I$(top_srcdir)/src/rtc \
	-I$(top_srcdir)/src/c64 \
	-I$(top_srcdir)/src/sid \
	-I$(top_srcdir)/src/lib/p64 \
	-I$(top_srcdir)/src/vicii \
	-I$(top_srcdir)/src/rtc

noinst_LIBRARIES = libc64cartsystem.a libc64cart.a libc64commoncart.a

libc64cartsystem_a_SOURCES = \
	c64cart.c \
	c64carthooks.c \
	c64cartmem.c \
	c64cartmem.h \
	c64cartsystem.h \
	crt.c \
	crt.h

libc64cart_a_SOURCES = \
	actionreplay2.c \
	actionreplay2.h \
	actionreplay3.c \
	actionreplay3.h \
	actionreplay4.c \
	actionreplay4.h \
	actionreplay.c \
	actionreplay.h \
	atomicpower.c \
	atomicpower.h \
	c64-generic.c \
	c64-generic.h \
	c64-midi.c \
	c64-midi.h \
	c64tpi.c \
	c64tpi.h \
	capture.c \
	capture.h \
	comal80.c \
	comal80.h \
	delaep256.c \
	delaep256.h \
	delaep64.c \
	delaep64.h \
	delaep7x8.c \
	delaep7x8.h \
	diashowmaker.c \
	diashowmaker.h \
	dqbb.c \
	dqbb.h \
	dinamic.c \
	dinamic.h \
	easyflash.c \
	easyflash.h \
	epyxfastload.c \
	epyxfastload.h \
	exos.c \
	exos.h \
	expert.c \
	expert.h \
	final.c \
	final.h \
	final3.c \
	final3.h \
	finalplus.c \
	finalplus.h \
	formel64.c \
	formel64.h \
	freezeframe.c \
	freezeframe.h \
	freezemachine.c \
	freezemachine.h \
	funplay.c \
	funplay.h \
	gamekiller.c \
	gamekiller.h \
	gs.c \
	gs.h \
	ide64.c \
	ide64.h \
	isepic.c \
	isepic.h \
	kcs.c \
	kcs.h \
	kingsoft.c \
	kingsoft.h \
	mach5.c \
	mach5.h \
	magicdesk.c \
	magicdesk.h \
	magicformel.c \
	magicformel.h \
	magicvoice.c \
	magicvoice.h \
	mikroass.c \
	mikroass.h \
	mmcreplay.c \
	mmcreplay.h \
	mmc64.c \
	mmc64.h \
	ocean.c \
	ocean.h \
	prophet64.c \
	prophet64.h \
	pagefox.c \
	pagefox.h \
	ramcart.c \
	ramcart.h \
	retroreplay.c \
	retroreplay.h \
	reu.c \
	reu.h \
	rexep256.c \
	rexep256.h \
	rexutility.c \
	rexutility.h \
	ross.c \
	ross.h \
	silverrock128.c \
	silverrock128.h \
	simonsbasic.c \
	simonsbasic.h \
	snapshot64.c \
	snapshot64.h \
	stardos.c \
	stardos.h \
	stb.c \
	stb.h \
	superexplode5.c \
	superexplode5.h \
	supergames.c \
	supergames.h \
	supersnapshot.c \
	supersnapshot.h \
	supersnapshot4.c \
	supersnapshot4.h \
	warpspeed.c \
	warpspeed.h \
	westermann.c \
	westermann.h \
	zaxxon.c \
	zaxxon.h

libc64commoncart_a_SOURCES = \
	c64acia.h \
	c64acia1.c \
	digimax.c \
	digimax.h \
	ds12c887rtc.c \
	ds12c887rtc.h \
	georam.c \
	georam.h \
	sfx_soundexpander.c \
	sfx_soundexpander.h \
	sfx_soundsampler.c \
	sfx_soundsampler.h \
	tfe.c \
	tfe.h
