INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/drive \
	-I$(top_srcdir)/src/lib/p64

noinst_LIBRARIES = libdriveiec128dcr.a

libdriveiec128dcr_a_SOURCES = \
	iec128dcr-cmdline-options.c \
	iec128dcr-cmdline-options.h \
	iec128dcr-resources.c \
	iec128dcr-resources.h \
	iec128dcr.c \
	iec128dcrrom.c \
	iec128dcrrom.h
