INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/core \
	-I$(top_srcdir)/src/drive \
	-I$(top_srcdir)/src/drive/iec \
	-I$(top_srcdir)/src/lib/p64

noinst_LIBRARIES = libdriveiecc64exp.a

libdriveiecc64exp_a_SOURCES = \
	c64exp-cmdline-options.c \
	c64exp-cmdline-options.h \
	c64exp-resources.c \
	c64exp-resources.h \
	iec-c64exp.c \
	dolphindos3.c \
	dolphindos3.h \
	profdos.c \
	profdos.h \
	supercard.c \
	supercard.h
