INCLUDES = \
	@ARCH_INCLUDES@ \
	-I$(top_builddir)/src \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/drive \
	-I$(top_srcdir)/src/drive/iec \
	-I$(top_srcdir)/src/lib/p64

noinst_LIBRARIES = libdriveiecplus4exp.a

libdriveiecplus4exp_a_SOURCES = \
	iec-plus4exp.c \
	plus4exp-cmdline-options.c \
	plus4exp-cmdline-options.h \
	plus4exp-resources.c \
	plus4exp-resources.h
